--- a/index.html
+++ b/index.html
@@ -26,24 +26,7 @@
       <div class="card">
         <div class="card-body">
           <div class="row">
-            <div class="col-4">
-              <h1>Currently in Atlanta</h1>
-            </div>
-            <div class="col-4-temp">
-              <h3>
-                <span id="temp"> 77</span>
-                <i class="fas fa-cloud-sun"></i>
-                <br />
-                <small class="hi-lo" id="im-hi-lo"> Hi 80°F | Lo 65°F </small>
-                <br />
-                <small class="hi-lo">
-                  <a href="" id="imperial">°F</a> |
-                  <a href="" id="metric">°C</a>
-                </small>
-              </h3>
-            </div>
-
-            <div class="col-4.15">
+            <div class="col-6">
               <form id="search-form">
                 <label> Search Location </label>
                 <div class="row">
@@ -68,6 +51,25 @@
                 </button>
               </form>
             </div>
+
+            <div class="col-6">
+              <h1>Currently in Atlanta</h1>
+            </div>
+            <div class="col-12">
+              <h3 class="display">
+                <i class="fas fa-cloud-sun"></i>
+                <span id="temp"> 77 </span>
+
+                <small class="hi-lo">
+                  <a href="" id="imperial">°F</a> |
+                  <a href="" id="metric">°C</a>
+                </small>
+                <br />
+                <small class="hi-lo" id="im-hi-lo"> Hi 80°F | Lo 65°F </small>
+                <br />
+              </h3>
+            </div>
+
             <br />
 
             <div class="col-12">
