Added open-source link

--- a/index.html
+++ b/index.html
@@ -144,7 +144,10 @@
         </div>
       </div>
     </div>
-
+    <h5>
+      <a href="https://github.com/djdaniray/Weather-app-DS">Open-source code</a>
+      by Danielle Stukes
+    </h5>
     <script src="src/script.js"></script>
   </body>
 </html>
