Fixed JS for #wind
missing poundsign initially

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
             <div class="col-6">
               <ul class="weather-details">
                 <li><span id="descrip">Cloudy</span></li>
-                <li>Humidity:<span id="humid"> 59</span>%</li>
-                <li>Wind Speed:<span id="wind"> 16</span>mph</li>
+                <li>Humidity: <span id="humid"> 59</span>%</li>
+                <li>Wind: <span id="wind">16</span> mph</li>
               </ul>
             </div>
 
