Added ids for forecast

--- a/index.html
+++ b/index.html
@@ -88,14 +88,13 @@
               </ul>
             </div>
 
-            <br />
             <hr />
             <div class="col-12">
               <p class="future-weather" id="forecast">
                 <strong> Next Five Days in Atlanta </strong>
               </p>
             </div>
-            <div class="col-sm-4.75 fri">
+            <div class="col-sm-4.75 fri" id="day1">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Fri</h5>
@@ -104,7 +103,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-4.75 sat">
+            <div class="col-sm-4.75 sat" id="day2">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Sat</h5>
@@ -113,7 +112,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-4.75 sun">
+            <div class="col-sm-4.75 sun" id="day3">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Sun</h5>
@@ -122,7 +121,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-4.75 mon">
+            <div class="col-sm-4.75 mon" id="day4">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Mon</h5>
@@ -131,7 +130,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-4.75 tue">
+            <div class="col-sm-4.75 tue" id="day5">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Tue</h5>
