Updated ids for forecast, started JS for forecast

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                 <span id="temp"> 77 </span>
 
                 <small class="hi-lo">
-                  <a href="" id="imperial">°F</a> |
-                  <a href="" id="metric">°C</a>
+                  <a href=" " id="imperial">°F</a> |
+                  <a href=" " id="metric">°C</a>
                 </small>
                 <br />
                 <small class="hi-lo" id="im-hi-lo"> Hi 80°F | Lo 65°F </small>
@@ -94,47 +94,47 @@
                 <strong> Next Five Days in Atlanta </strong>
               </p>
             </div>
-            <div class="col-sm-4.75 fri" id="day1">
+            <div class="col-sm-4.75 fri">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Fri</h5>
-                  <p class="card-text">73° 🌤</p>
+                  <p class="card-text" id="day1">73° 🌤</p>
                   <small class="low-temp"> 60° </small>
                 </div>
               </div>
             </div>
-            <div class="col-sm-4.75 sat" id="day2">
+            <div class="col-sm-4.75 sat">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">Sat</h5>
+                  <h5 class="card-title" id="day2">Sat</h5>
                   <p class="card-text">78° 🌦</p>
                   <small class="low-temp"> 64° </small>
                 </div>
               </div>
             </div>
-            <div class="col-sm-4.75 sun" id="day3">
+            <div class="col-sm-4.75 sun">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Sun</h5>
-                  <p class="card-text">69° 🌧</p>
+                  <p class="card-text" id="day3">69° 🌧</p>
                   <small class="low-temp"> 49° </small>
                 </div>
               </div>
             </div>
-            <div class="col-sm-4.75 mon" id="day4">
+            <div class="col-sm-4.75 mon">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Mon</h5>
-                  <p class="card-text">70° 🌩</p>
+                  <p class="card-text" id="day4">70° 🌩</p>
                   <small class="low-temp"> 49° </small>
                 </div>
               </div>
             </div>
-            <div class="col-sm-4.75 tue" id="day5">
+            <div class="col-sm-4.75 tue">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Tue</h5>
-                  <p class="card-text">71° ☀️</p>
+                  <p class="card-text" id="day5">71° ☀️</p>
                   <small class="low-temp"> 55° </small>
                 </div>
               </div>
