Added float-right to C|F

--- a/index.html
+++ b/index.html
@@ -60,11 +60,12 @@
               <h3 class="display">
                 <i class="fas fa-cloud-sun"></i>
                 <span id="temp"> 77 </span>
-
-                <small class="hi-lo">
-                  <a href=" " id="imperial">°F</a> |
-                  <a href=" " id="metric">°C</a>
-                </small>
+                <div class="float-right">
+                  <small class="hi-lo">
+                    <a href=" " id="imperial">°F</a> |
+                    <a href=" " id="metric">°C</a>
+                  </small>
+                </div>
                 <br />
                 <small class="hi-lo" id="im-hi-lo"> Hi 80°F | Lo 65°F </small>
                 <br />
