Changed google font to more bold
weight 700 Raleway

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
       src="https://kit.fontawesome.com/a8a4e25c3e.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/style.css" />
