--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 
             <div class="col-6">
               <ul class="date-time">
-                <li id="current-date">Thursday, 10/22/2020</li>
+                <li class="current-day">Thursday</li>
+                <li id="current-date">10/22/2020</li>
                 <li id="current-time">8:00 PM</li>
                 <li>
                   <small> Updated 5 minutes ago </small>
