add clearfix to div

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               </form>
             </div>
 
-            <div class="col-6">
+            <div class="col-6 clearfix">
               <h3 class="display">
                 <i class="fas fa-cloud-sun"></i>
                 <span id="temp"> 77 </span>
