Made Hi Lo conditions into a list element

--- a/index.html
+++ b/index.html
@@ -69,15 +69,14 @@
                   </small>
                 </div>
                 <br />
-                <small class="hi-lo" id="im-hi-lo"> Hi 80°F | Lo 65°F </small>
               </h3>
             </div>
 
             <div class="col-6">
               <ul class="date-time">
-                <li class="current-day">Thursday</li>
-                <li id="current-date">10/22/2020</li>
-                <li id="current-time">8:00 PM</li>
+                <li class="current-day"></li>
+                <li id="current-date"></li>
+                <li id="current-time"></li>
                 <li>
                   <small> Updated 5 minutes ago </small>
                 </li>
@@ -86,6 +85,9 @@
             <div class="col-6">
               <ul class="weather-details">
                 <li><span id="descrip">Cloudy</span></li>
+                <li>
+                  <span id="im-hi-lo">Hi 80°F | Lo 65°F</span>
+                </li>
                 <li>Humidity: <span id="humid"> 59</span>%</li>
                 <li>Wind: <span id="wind">16</span> mph</li>
               </ul>
