Added id to i element fixed js for button function at lines 129-134

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             <div class="col-6 clearfix">
               <h3 class="display">
-                <i class="fas fa-cloud-sun"></i>
+                <i class="fas fa-cloud-sun" id="icon"></i>
                 <span id="temp"> 77 </span>
                 <div class="float-right">
                   <small class="hi-lo">
