Added relavent weather image
updated spacing for image in CSS, removed font awesome image

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 
             <div class="col-6 clearfix">
               <h3 class="display">
-                <i class="fas fa-cloud-sun" id="icon"></i>
+                <img src="" alt="" id="icon" />
+
                 <span id="temp"> 77 </span>
                 <div class="float-right">
                   <small class="hi-lo">
