Added margin left to html for units

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                 <span id="temp"> 77 </span>
                 <div class="float-right">
-                  <small class="hi-lo">
+                  <small class="hi-lo ml-2">
                     <a href=" " id="imperial">°F</a> |
                     <a href=" " id="metric">°C</a>
                   </small>
