Unit buttons show live data for F and C

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                   <span id="im-hi-lo">Hi 80°F | Lo 65°F</span>
                 </li>
                 <li>Humidity: <span id="humid"> 59</span>%</li>
-                <li>Wind: <span id="wind">16</span> mph</li>
+                <li>Wind: <span id="wind">16</span></li>
               </ul>
             </div>
 
