Corrected weather description in JS

--- a/index.html
+++ b/index.html
@@ -76,12 +76,9 @@
 
             <div class="col-6">
               <ul class="date-time">
-                <li class="current-day"></li>
-                <li id="current-date"></li>
-                <li id="current-time"></li>
-                <li>
-                  <small> Updated 5 minutes ago </small>
-                </li>
+                <li class="current-day">Friday</li>
+                <li id="current-date">10/22/2020</li>
+                <li id="current-time">Updated at 8 PM</li>
               </ul>
             </div>
             <div class="col-6">
