Added  real time day to forecast

--- a/index.html
+++ b/index.html
@@ -91,18 +91,17 @@
                 <li>Wind: <span id="wind">16</span></li>
               </ul>
             </div>
-
             <hr />
             <div class="col-12">
               <p class="future-weather" id="forecast">
-                <strong> Next Five Days in Atlanta </strong>
+                Next Five Days in Atlanta
               </p>
             </div>
             <div class="col-sm-4.75 fri">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">Fri</h5>
-                  <p class="card-text" id="day1">73° 🌤</p>
+                  <h5 class="card-title" id="day1">Fri</h5>
+                  <p class="card-text">73° 🌤</p>
                   <small class="low-temp"> 60° </small>
                 </div>
               </div>
@@ -119,8 +118,8 @@
             <div class="col-sm-4.75 sun">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">Sun</h5>
-                  <p class="card-text" id="day3">69° 🌧</p>
+                  <h5 class="card-title" id="day3">Sun</h5>
+                  <p class="card-text">69° 🌧</p>
                   <small class="low-temp"> 49° </small>
                 </div>
               </div>
@@ -128,8 +127,8 @@
             <div class="col-sm-4.75 mon">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">Mon</h5>
-                  <p class="card-text" id="day4">70° 🌩</p>
+                  <h5 class="card-title" id="day4">Mon</h5>
+                  <p class="card-text">70° 🌩</p>
                   <small class="low-temp"> 49° </small>
                 </div>
               </div>
@@ -137,8 +136,8 @@
             <div class="col-sm-4.75 tue">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">Tue</h5>
-                  <p class="card-text" id="day5">71° ☀️</p>
+                  <h5 class="card-title" id="day5">Tue</h5>
+                  <p class="card-text">71° ☀️</p>
                   <small class="low-temp"> 55° </small>
                 </div>
               </div>
