Updated unit links style

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <span id="temp"> 77 </span>
                 <div class="float-right">
                   <small class="hi-lo ml-2">
-                    <a href=" " id="imperial">°F</a> |
+                    <a href=" " class="active" id="imperial">°F</a> |
                     <a href=" " id="metric">°C</a>
                   </small>
                 </div>
