--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <h3 class="display">
                 <img src="" alt="" id="icon" />
 
-                <span id="temp"> 77 </span>
+                <span id="temp"> </span>
                 <div class="float-right">
                   <small class="hi-lo ml-2">
                     <a href=" " class="active" id="imperial">°F</a> |
@@ -97,7 +97,7 @@
                 Next Five Days in Atlanta
               </p>
             </div>
-            <div class="col-sm-2 fri">
+            <div class="col-2 fri">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title" id="day1">Fri</h5>
@@ -107,7 +107,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-2 sat">
+            <div class="col-2 sat">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title" id="day2">Sat</h5>
@@ -117,7 +117,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-2 sun">
+            <div class="col-2 sun">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title" id="day3">Sun</h5>
@@ -127,7 +127,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-2 mon">
+            <div class="col-2 mon">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title" id="day4">Mon</h5>
@@ -137,7 +137,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-2 tue">
+            <div class="col-2 tue">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title" id="day5">Tue</h5>
@@ -147,7 +147,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-2 tue">
+            <div class="col-2 tue">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title" id="day6">Tue</h5>
