--- a/index.html
+++ b/index.html
@@ -92,71 +92,7 @@
               </ul>
             </div>
             <hr />
-            <div class="col-12">
-              <p class="future-weather" id="forecast">
-                Next Five Days in Atlanta
-              </p>
-            </div>
-            <div class="col-2 fri">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title" id="day1">Fri</h5>
-                  <img src="" alt="" id="icon" />
-                  <p class="card-text">73° 🌤</p>
-                  <small class="low-temp"> 60° </small>
-                </div>
-              </div>
-            </div>
-            <div class="col-2 sat">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title" id="day2">Sat</h5>
-                  <img src="" alt="" id="icon" />
-                  <p class="card-text">78° 🌦</p>
-                  <small class="low-temp"> 64° </small>
-                </div>
-              </div>
-            </div>
-            <div class="col-2 sun">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title" id="day3">Sun</h5>
-                  <img src="" alt="" id="icon" />
-                  <p class="card-text">69° 🌧</p>
-                  <small class="low-temp"> 49° </small>
-                </div>
-              </div>
-            </div>
-            <div class="col-2 mon">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title" id="day4">Mon</h5>
-                  <img src="" alt="" id="icon" />
-                  <p class="card-text">70° 🌩</p>
-                  <small class="low-temp"> 49° </small>
-                </div>
-              </div>
-            </div>
-            <div class="col-2 tue">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title" id="day5">Tue</h5>
-                  <img src="" alt="" id="icon" />
-                  <p class="card-text">71° ☀️</p>
-                  <small class="low-temp"> 55° </small>
-                </div>
-              </div>
-            </div>
-            <div class="col-2 tue">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title" id="day6">Tue</h5>
-                  <img src="" alt="" id="icon" />
-                  <p class="card-text">71° ☀️</p>
-                  <small class="low-temp"> 55° </small>
-                </div>
-              </div>
-            </div>
+            <div class="col-12 future-weather" id="forecast"></div>
           </div>
         </div>
       </div>
