--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                 <li>Wind: <span id="wind">16</span></li>
               </ul>
             </div>
-            <hr />
-            <div class="col-12 future-weather" id="forecast"></div>
+
+            <div class="row future-weather" id="forecast"></div>
           </div>
         </div>
       </div>
