Forecast images now centered

--- a/index.html
+++ b/index.html
@@ -92,7 +92,16 @@
               </ul>
             </div>
 
-            <div class="row future-weather" id="forecast"></div>
+            <div class="row future-weather" id="forecast">
+              <div class="col-2">
+                <h5></h5>
+                <img src="" />
+                <div class="high-temp">
+                  <strong>° </strong>
+                  °
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
